# crumsort-cpp

./: CMakeLists.txt  README.md
.github/workflows/: test.yaml
bench/: CMakeLists.txt  README.md  bench.cpp  plot.py  scandum_sorts.c  scandum_sorts.h
src/: crumsort.hpp  quadsort.hpp
test/: CMakeLists.txt  test.cpp
